--- a/security/src/main/resources/application.yaml
+++ b/security/src/main/resources/application.yaml
@@ -6,11 +6,11 @@ spring:
     active: local
     include: secret-key
   datasource:
-    #hikari: //추가 공부 필요
+    #hikari:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: qwer1234!!
-    url: jdbc:mysql://study.c5djo4cjoi4o.ap-northeast-2.rds.amazonaws.com/study?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: 
+    password: 
+    url:
   jpa:
     show-sql: true
     open-in-view: true
